--- a/src/clickCounter/index.html
+++ b/src/clickCounter/index.html
@@ -11,7 +11,15 @@
     />
   </head>
 
-  <body>
-    <h1 class="absolute-center animation-rotation">Click Counter</h1>
+  <body class="bg-tertiary">
+    <div class="card card-narrow standard-border m-auto m-t ">
+      <div class="info">
+        <div>Click counter</div>
+        <div class="m-t">
+          <span class="info-key">clicks:</span><span class="text-accent">0</span>
+        </div>
+      </div>
+      <button class="d-block btn-primary m-t">Click</button>
+    </div>
   </body>
 </html>
