--- a/src/main/index.html
+++ b/src/main/index.html
@@ -12,6 +12,7 @@
   </head>
 
   <body>
+    <div id="container" class="row"></div>
     <img
       class="placeholder-logo absolute-center animation-rotation"
       src="https://manychat.com/107994/assets/fonts/logo.51b.svg"
