MY MESSAGE OHH MY GAWD

--- a/src/main/index.html
+++ b/src/main/index.html
@@ -12,10 +12,13 @@
   </head>
 
   <body>
-    <div id="container" class="row"></div>
-    <img
-      class="placeholder-logo absolute-center animation-rotation"
-      src="https://manychat.com/107994/assets/fonts/logo.51b.svg"
-    />
+    <div id="container" class="row container m-t wrap"></div>
+
+    <!--
+      <img
+        class="placeholder-logo absolute-center animation-rotation"
+        src="https://manychat.com/107994/assets/fonts/logo.51b.svg"
+      />
+    -->
   </body>
 </html>
